
    PIG-997 Sorted Table Support by Zebra (yanz via gates)
  	
	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

  BUG FIXES

    PIG-1256: Bag field should always contain a tuple type as the field schema in ResourceSchema object converted from Zebra Schema (xuefuz via yanz)

    PIG-1227: Throw exception if column group meta file is missing for an unsorted table (yanz)

    PIG-1201: unnecessary name node calls by each mapper; too big input split serialization size by Pig's Slice implementation (yanz)

    PIG-1115: cleanup of temp files left by failed tasks (gauravj via yanz)

    PIG-1167: Hadoop file glob support (yanz)

    PIG-1153: Record split exception fix (yanz)

    PIG-1145: Merge Join on Large Table throws an EOF exception (yanz)

    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
	gates)

    PIG-1078: merge join with empty table failed (yanz via gates)

    PIG-1091: Exception when load with projection of map keys on a map column
	that is not map split (yanz via gates).

    PIG-1026: [zebra] map split returns null (yanz via pradeepkth)

	PIG-1057 Zebra does not support concurrent deletions of column groups now
	(chaow via gates).

	PIG-944  Change schema to be taken from StoreConfig instead of
	TableStorer's constructor (yanz via gates).

    PIG-918. Fix infinite loop only columns in first column group are
    specified. (Yan Zhou via rangadi)
 
    PIG-949. If an entire map is placed in non default column group, 
    and a specific key placed in another CG, the second CG did not 
    work as expected. (Yan Zhou, Jing Huang (tests) via rangadi)

    PIG-987. Access control for column groups. Users can specifify
    desired group, owner, and, permissions for a column group.
    (Yan Zhou via rangadi)